Panel: Revert making the mask smaller by 1px

This fixes 460896, but breaks the fix for 417511. It will be re-fixed again by
https://invent.kde.org/frameworks/plasma-framework/-/merge_requests/644, without
any negative side effects.

BUG: 460896
CCBUG: 417511
FIXED-IN: 5.26.4
(cherry picked from commit 1abe11473bcaa282ad1b5087b8dbaab2329530de)